browser plugin functionality added

--- a/time-tracker-extension_edge/manifest.json
+++ b/time-tracker-extension_edge/manifest.json
@@ -6,5 +6,10 @@
   "permissions": ["activeTab"],
   "browser_action": {
     "default_popup": "popup.html"    
-  }  
+  },
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  }
 }
