--- a/time-tracker-extension_edge/manifest.json
+++ b/time-tracker-extension_edge/manifest.json
@@ -1,15 +1,23 @@
 {
-  "manifest_version": 2,
-  "name": "Zeiterfassungs-Plugin",
+  "manifest_version": 3,
+  "name": "Quodara Chrono - Zeiterfassung",
   "version": "1.0",
-  "description": "Ein einfaches Zeiterfassungs-Plugin für Edge.",
-  "permissions": ["activeTab"],
-  "browser_action": {
-    "default_popup": "popup.html"    
+  "description": "Eine Erweiterung zur Zeiterfassung für Quodara",
+  "permissions": [
+    "storage",
+    "activeTab"
+  ],
+  "action": {
+    "default_popup": "popup.html",
+    "default_icon": {
+      "16": "images/icon16.png",
+      "48": "images/icon48.png",
+      "128": "images/icon128.png"
+    }
   },
   "icons": {
-    "16": "icon16.png",
-    "48": "icon48.png",
-    "128": "icon128.png"
+    "16": "images/icon16.png",
+    "48": "images/icon48.png",
+    "128": "images/icon128.png"
   }
 }
